# rules_liferay

./: .gitignore  README.md  WORKSPACE
examples/: examples.bzl
examples/authenticator-shiro/: BUILD  BUILD.bazel  bnd.bnd
examples/foo-api/: BUILD  BUILD.bazel
examples/foo-service/: BUILD  BUILD.bazel
examples/foo-theme/: BUILD.bazel
examples/foo-web/: BUILD  BUILD.bazel
examples/sass_libraries/: BUILD
liferay/: liferay.bzl
liferay/tools/: BUILD  BUILD.bazel
liferay/tools/src/main/java/com/liferay/bazel/: BazelOSGiBundleBuilder.java  BazelThemeBuilder.java
