load("//liferay:liferay.bzl", "liferay_application")

liferay_application(
    name="authenticator-shiro",
    srcs=(glob(["src/main/java/**/*.java"])),
    resources=(glob(["src/main/resources/*"])),
    deps=[
        "@portal_kernel_artifact//jar",
        "@shiro_core_artifact//jar",
        "@osgi_service_component_annotations_artifact//jar",
    ],
)
