package(default_visibility = ["//:__subpackages__"])

load("//liferay:liferay.bzl", "liferay_application")

liferay_application(
    name = "foo-api",
    srcs = (glob(["src/main/java/**/*.java"])),
    deps = [
        "@bndlib_artifact//jar",
        "@osgi_service_tracker_collections_artifact//jar",
        "@osgi_util_artifact//jar",
        "@portal_kernel_artifact//jar",
        "@osgi_core_artifact//jar",
    ],
)