load("//liferay:liferay.bzl", "liferay_application")

liferay_application(
    name="foo-service",
    srcs=(glob(["src/main/java/**/*.java"])),
    resources=(glob(["src/main/resources/*"])),
    deps=[
        "//examples/foo-api",
        "@bndlib_artifact//jar",
        "@osgi_service_tracker_collections_artifact//jar",
        "@osgi_util_artifact//jar",
        "@portal_kernel_artifact//jar",
        "@portal_spring_extender_artifact//jar",
    ],
)