load("//liferay:liferay.bzl", "liferay_application")

liferay_application(
    name="foo-web",
    srcs=(glob(["src/main/java/**/*.java"])),
    resources=glob(["src/main/resources/**/*"]),
    deps=[
        "//examples/foo-api",
        "@portal_kernel_artifact//jar",
        "@portlet_api_artifact//jar",
        "@servlet_api_artifact//jar",
        "@osgi_service_component_annotations_artifact//jar",
    ],
)